# udp_messaging

./: Cargo.toml
src/: friends.rs  main.rs  receiver.rs  settings.rs
src/ui/: logic.rs  mod.rs  rendering.rs
srcold/: main.rs  receiver.rs  terminal.rs
srcold/commands/: mod.rs
