[package]
name = "udp_messaging"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", features = ["serde"] }
tui-input = "0.11.1"
clap = { version = "4.5.27", features = ["derive"] }
local-ip-address = "0.6.3"
anyhow = "1.0"
dirs = "6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# crossterm = "0.28.1"
# tokio = { version = "1.43.0", features = ["full"] }
